Text alignment fix

--- a/dynamic/viewers/text.css
+++ b/dynamic/viewers/text.css
@@ -32,7 +32,10 @@
 }
 
 /* Put a border around prettyprinted code snippets. */
-pre.prettyprint { padding: 2px; border: 1px solid #888 }
+pre.prettyprint {
+    padding: 2px;
+    border: 1px solid #e3e3e3;
+}
 
 /* Specify class=linenums on a pre to get line numbering */
 ol.linenums { margin-top: 0; margin-bottom: 0 } /* IE indents via margin-left */
@@ -56,4 +59,9 @@ li.L9 { background: #eee }
     color: gray;
     font-style: italic;
     padding-left: 10px;
+}
+
+.text-viewer
+{
+    text-align: left;
 }
